--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, viewport-fit=cover" />
   <title>Flip7 Pixel</title>
+  <link rel="icon" href="./src/assets/favicon.ico" />
   <link rel="stylesheet" href="./src/style.css" />
 </head>
 
