--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, viewport-fit=cover" />
-  <title>Flip7 Pixel</title>
+  <title>FlipIt!</title>
   <link rel="icon" href="./src/assets/images/favicon.ico" />
   <link rel="stylesheet" href="./src/style.css" />
 </head>
